extra/yelb-appserver.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yelb-appserver
spec:
  replicas: 1 
  template:
    metadata:
      labels:
        app: yelb-appserver
        tier: middletier
    spec:
      containers:
      - name: yelb-appserver
        image:  mreferre/yelb-appserver:0.3
        ports:
        - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  labels:
    app: yelb-appserver
    tier: middletier
spec:
  type: ClusterIP
  ports:
  - port: 4567
  selector:
    app: yelb-appserver
    tier: middletier
