extra/db-access-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-allow-5433
spec:
  podSelector:
    matchLabels:
      app: yelb-db
  ingress:
  - ports:
    - port: 5433
    from:
    - podSelector:
        matchLabels:
          app: yelb-appserver
